--- a/english3.ipynb
+++ b/english3.ipynb
@@ -32,9 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['grandmother', 'your', '.', 'Take', 'them', 'to']\n",
+      "['Take', 'them', 'your', '.', 'grandmother', 'to']\n",
+      "['them', '.', 'your', 'to', 'grandmother', 'Take']\n",
+      "['your', 'them', 'grandmother', '.', 'to', 'Take']\n",
+      "['Take', 'your', 'grandmother', '.', 'to', 'them']\n",
+      "['your', 'them', 'to', '.', 'Take', 'grandmother']\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
@@ -53,6 +66,8 @@
     "\n",
     "exercise_type =  'Выберите правильный артикль'\n",
     "\n",
+    "exercise_type =  'Расставьте в правильном порядке слова предложения'\n",
+    "\n",
     "options = []\n",
     "task = ''\n",
     "answer = ''\n",
@@ -64,6 +79,7 @@
     "    #print(len(sentence))\n",
     "        #st.write(sentence)\n",
     "    # options = ['a', 'the', 'an']\n",
+    "    task = 'articles'\n",
     "    lst=[]\n",
     "    test_string = sentence.split(\" \")\n",
     "        \n",
@@ -114,16 +130,45 @@
     "            options = [token, token._.inflect('JJS'), token._.inflect('JJR'), token._.inflect('JJ'), token._.inflect('RB'), token._.inflect('RBR'), token._.inflect('RBS')]\n",
     "            answer = token\n",
     "            task = token.pos_ \n",
+    "            write_it_df=1\n",
+    "\n",
+    "        elif exercise_type ==  'Расставьте в правильном порядке слова предложения'  and len(nlp(str(sentence))) < 9:\n",
+    "            \n",
+    "            options = [token.text for token in nlp(str(sentence))]\n",
+    "            #options =  [i for i in options]\n",
+    "            random.shuffle(options)\n",
+    "            print(options)\n",
+    "            options = [options] * len(options)\n",
+    "            answer = [token.text for token in nlp(str(sentence))]\n",
+    "            \n",
+    "            #print(options)\n",
+    "            write_it_df=1\n",
+    "            task = 'order_words'    \n",
+    "        \n",
     "        else: pass\n",
+    "\n",
+    "    # if exercise_type ==  'Расставьте в правильном порядке слова предложения' and len(nlp(str(sentence))) < 8:\n",
+    "            \n",
+    "    #     options.append([token.text])\n",
+    "    #     answer = sentence\n",
+    "    #         #print(1)\n",
+    "    #         #print(options)\n",
+    "    #     print(len(nlp(str(sentence))))\n",
+    "    #     print(nlp(str(sentence)))\n",
+    "    #     write_it_df=1\n",
+    "\n",
+    "    \n",
+    "        \n",
     "# отобрать предложения, где есть глагол или прилагательное\n",
     "# отфильтровать короткие            \n",
     "    # print(str(token))\n",
     "    \n",
     "    # sentence = sentence.replace(str(token), '___')\n",
     "    # print(sentence)            \n",
-    "    if len(nlp(str(sentence))) > 3:\n",
+    "    if len(nlp(str(sentence))) > 3 and len(answer) > 0 and write_it_df==1:\n",
     "        df.loc[len(df)]=[sentence, options, answer, [], task]  \n",
-    "        options=[]  \n",
+    "        options=[]\n",
+    "        write_it_df=0  \n",
     "        \n",
     "        #print(sentence)\n",
     "    #df['sentence'] = df['sentence'].apply(lambda x: x.replace(str(answer), ' ___ '))\n",
@@ -133,25 +178,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Once upon a time there was a sweet little girl. Everyone who saw her liked her, but most of all her grandmother, who did not know what to give the child next. Once she gave her a little cap made of red velvet. Because it suited her so well, and she wanted to wear it all the time, she came to be known as Little Red Cap.One day her mother said to her, \"Come Little Red Cap. Here is a piece of cake and a bottle of wine. Take them to your grandmother. She is sick and weak, and they will do her well. Mind your manners and give her my greetings. Behave yourself on the way, and do not leave the path, or you might fall down and break the glass, and then there will be nothing for your sick grandmother.\"Little Red Cap promised to obey her mother. The grandmother lived out in the woods, a half hour from the village. When Little Red Cap entered the woods a wolf came up to her. She did not know what a wicked animal he was, and was not afraid of him.\"Good day to you, Little Red Cap.\"\"Thank you, wolf.\"\"Where are you going so early, Little Red Cap?\"\"To grandmother\\'s.\"\"And what are you carrying under your apron?\"\"Grandmother is sick and weak, and I am taking her some cake and wine. We baked yesterday, and they should give her strength.\"\"Little Red Cap, just where does your grandmother live?\"\"Her house is a good quarter hour from here in the woods, under the three large oak trees. There\\'s a hedge of hazel bushes there. You must know the place,\" said Little Red Cap.The wolf thought to himself, \"Now there is a tasty bite for me. Just how are you going to catch her?\" Then he said, \"Listen, Little Red Cap, haven\\'t you seen the beautiful flowers that are blossoming in the woods? Why don\\'t you go and take a look? And I don\\'t believe you can hear how beautifully the birds are singing. You are walking along as though you were on your way to school in the village. It is very beautiful in the woods.\"Little Red Cap opened her eyes and saw the sunlight breaking through the trees and how the ground was covered with beautiful flowers. She thought, \"If a take a bouquet to grandmother, she will be very pleased. Anyway, it is still early, and I\\'ll be home on time.\" And she ran off into the woods looking for flowers. Each time she picked one she thought that she could see an even more beautiful one a little way off, and she ran after it, going further and further into the woods. But the wolf ran straight to the grandmother\\'s house and knocked on the door.\"Who\\'s there?\"\"Little Red Cap. I\\'m bringing you some cake and wine. Open the door for me.\"\"Just press the latch,\" called out the grandmother. \"I\\'m too weak to get up.\"The wolf pressed the latch, and the door opened. He stepped inside, went straight to the grandmother\\'s bed, and ate her up. Then he took her clothes, put them on, and put her cap on his head. He got into her bed and pulled the curtains shut.Little Red Cap had run after flowers, and did not continue on her way to grandmother\\'s until she had gathered all that she could carry. When she arrived, she found, to her surprise, that the door was open. She walked into the parlor, and everything looked so strange that she thought, \"Oh, my God, why am I so afraid? I usually like it at grandmother\\'s.\" Then she went to the bed and pulled back the curtains. Grandmother was lying there with her cap pulled down over her face and looking very strange.\"Oh, grandmother, what big ears you have!\"\"All the better to hear you with.\"\"Oh, grandmother, what big eyes you have!\"\"All the better to see you with.\"\"Oh, grandmother, what big hands you have!\"\"All the better to grab you with!\"\"Oh, grandmother, what a horribly big mouth you have!\"\"All the better to eat you with!\" And with that he jumped out of bed, jumped on top of poor Little Red Cap, and ate her up. As soon as the wolf had finished this tasty bite, he climbed back into bed, fell asleep, and began to snore very loudly.A huntsman was just passing by. He thought it strange that the old woman was snoring so loudly, so he decided to take a look. He stepped inside, and in the bed there lay the wolf that he had been hunting for such a long time. \"He has eaten the grandmother, but perhaps she still can be saved. I won\\'t shoot him,\" thought the huntsman. So he took a pair of scissors and cut open his belly.He had cut only a few strokes when he saw the red cap shining through. He cut a little more, and the girl jumped out and cried, \"Oh, I was so frightened! It was so dark inside the wolf\\'s body!\"And then the grandmother came out alive as well. Then Little Red Cap fetched some large heavy stones. They filled the wolf\\'s body with them, and when he woke up and tried to run away, the stones were so heavy that he fell down dead.The three of them were happy. The huntsman took the wolf\\'s pelt. The grandmother ate the cake and drank the wine that Little Red Cap had brought. And Little Red Cap thought to herself, \"As long as I live, I will never leave the path and run off into the woods by myself if mother tells me not to.\"They also tell how Little Red Cap was taking some baked things to her grandmother another time, when another wolf spoke to her and wanted her to leave the path. But Little Red Cap took care and went straight to grandmother\\'s. She told her that she had seen the wolf, and that he had wished her a good day, but had stared at her in a wicked manner. \"If we hadn\\'t been on a public road, he would have eaten me up,\" she said.\"Come,\" said the grandmother. \"Let\\'s lock the door, so he can\\'t get in.\"Soon afterward the wolf knocked on the door and called out, \"Open up, grandmother. It\\'s Little Red Cap, and I\\'m bringing you some baked things.\"They remained silent, and did not open the door. The wicked one walked around the house several times, and finally jumped onto the roof. He wanted to wait until Little Red Cap went home that evening, then follow her and eat her up in the darkness. But the grandmother saw what he was up to. There was a large stone trough in front of the house.\"Fetch a bucket, Little Red Cap,\" she said. \"Yesterday I cooked some sausage. Carry the water that I boiled them with to the trough.\" Little Red Cap carried water until the large, large trough was clear full. The smell of sausage arose into the wolf\\'s nose. He sniffed and looked down, stretching his neck so long that he could no longer hold himself, and he began to slide. He slid off the roof, fell into the trough, and drowned. And Little Red Cap returned home happily and safely.Source: \"Rothkäppchen,\" Kinder- und Hausmärchen, 1st ed. (Berlin: Realschulbuchhandlung, 1812), v. 1, no. 26, pp. 113-18. Translated by D. L. Ashliman.The Grimms\\' source for the first variant (the main story) was Jeanette Hassenpflug (1791-1860). Marie Hassenpflug (1788-1856) provided them with the second variant (the concluding episode, introduced with the sentence \"They also tell how Little Red Cap was taking some baked things to her grandmother another time....\"The German title of this tale is Rotkäppchen (Rothkäppchen in the nineteenth-century spelling of the Grimm brothers).Link to an English translation of the Grimms\\' final version (edition of 1857) of Little Red Cap.Link to the German text of the Grimms\\' final version: \"Rothkäppchen,\" Kinder- und Hausmärchen, gesammelt durch die Brüder Grimm, 7th edition, vol. 1 (Göttingen: Verlag der Dieterichschen Buchhandlung, 1857), no. 26, pp. 140-44.'"
+       "[3, 1, 2]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open('Little_Red_Cap_ Jacob_and_Wilhelm_Grimm.txt') as f:\n",
-    "    lines = f.read()\n",
+    "a = [1,2,3]\n",
+    "b = random.sample(a, len(a))\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>options</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>result</th>\n",
+       "      <th>task</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Take them to your grandmother.</td>\n",
+       "      <td>[[[Take], [them], [to], [your], [grandmother],...</td>\n",
+       "      <td>[Take, them, to, your, grandmother, .]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>order_words</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         sentence  \\\n",
+       "0  Take them to your grandmother.   \n",
+       "\n",
+       "                                             options  \\\n",
+       "0  [[[Take], [them], [to], [your], [grandmother],...   \n",
+       "\n",
+       "                                   answer result         task  \n",
+       "0  [Take, them, to, your, grandmother, .]     []  order_words  "
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "She did not know what a wicked animal he was, and was not an afraid of the him.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(nlp(str(sentence)))\n",
+    "len(nlp(str(sentence)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The strings are different.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
     "\n",
-    "lines = lines.replace('\\n','')\n"
+    "def shuffle_string(string):\n",
+    "    words = string.split()\n",
+    "    random.shuffle(words)\n",
+    "    shuffled_string = ' '.join(words)\n",
+    "    return shuffled_string\n",
+    "\n",
+    "def compare_strings(original, shuffled):\n",
+    "    if original == shuffled:\n",
+    "        print(\"The strings are the same.\")\n",
+    "    else:\n",
+    "        print(\"The strings are different.\")\n",
+    "\n",
+    "# Example usage\n",
+    "original_string = \"This is a test string.\"\n",
+    "shuffled_string = shuffle_string(original_string)\n",
+    "compare_strings(original_string, shuffled_string)\n"
    ]
   },
   {
