--- a/english3.ipynb
+++ b/english3.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-29 10:36:51.771802: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import spacy\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,22 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['grandmother', 'your', '.', 'Take', 'them', 'to']\n",
-      "['Take', 'them', 'your', '.', 'grandmother', 'to']\n",
-      "['them', '.', 'your', 'to', 'grandmother', 'Take']\n",
-      "['your', 'them', 'grandmother', '.', 'to', 'Take']\n",
-      "['Take', 'your', 'grandmother', '.', 'to', 'them']\n",
-      "['your', 'them', 'to', '.', 'Take', 'grandmother']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
@@ -137,7 +133,7 @@
     "            options = [token.text for token in nlp(str(sentence))]\n",
     "            #options =  [i for i in options]\n",
     "            random.shuffle(options)\n",
-    "            print(options)\n",
+    "            #print(options)\n",
     "            options = [options] * len(options)\n",
     "            answer = [token.text for token in nlp(str(sentence))]\n",
     "            \n",
@@ -192,11 +188,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "a = [1,2,3]\n",
-    "b = random.sample(a, len(a))\n",
-    "b"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
