--- a/english 2.ipynb
+++ b/english 2.ipynb
@@ -805,33 +805,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a'}"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(['a', 'the', 'an']).intersection(set(df.word_tokens[0]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 161,
    "metadata": {},
    "outputs": [
@@ -844,35 +817,13 @@
      ]
     }
    ],
-   "source": [
-    "aaa = ['the', 'a', 'an']\n",
-    "print(df.word_tokens[1])\n",
-    "print([i in df.word_tokens[1] for i in aaa])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0     False\n",
-      "1     False\n",
-      "2     False\n",
-      "3     False\n",
-      "4     False\n",
-      "      ...  \n",
-      "62    False\n",
-      "63     True\n",
-      "64    False\n",
-      "65    False\n",
-      "66    False\n",
-      "Name: word_tokens, Length: 67, dtype: bool\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -898,15 +849,65 @@
        "      <th>word_tokens</th>\n",
        "      <th>word_lemma</th>\n",
        "      <th>word_pos</th>\n",
+       "      <th>is_article</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>yesterday i cooked some sausage</td>\n",
-       "      <td>[yesterday, i, cooked, some, sausage]</td>\n",
-       "      <td>[yesterday, I, cook, some, sausage]</td>\n",
-       "      <td>[NOUN, PRON, VERB, DET, NOUN]</td>\n",
+       "      <th>0</th>\n",
+       "      <td>once upon a time there was a sweet little girl</td>\n",
+       "      <td>[once, upon, a, time, there, was, a, sweet, li...</td>\n",
+       "      <td>[once, upon, a, time, there, be, a, sweet, lit...</td>\n",
+       "      <td>[ADV, SCONJ, DET, NOUN, PRON, VERB, DET, ADJ, ...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>everyone who saw her liked her but most of all...</td>\n",
+       "      <td>[everyone, who, saw, her, liked, her, but, mos...</td>\n",
+       "      <td>[everyone, who, see, she, like, she, but, most...</td>\n",
+       "      <td>[PRON, PRON, VERB, PRON, VERB, PRON, CCONJ, AD...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>once she gave her a little cap made of red velvet</td>\n",
+       "      <td>[once, she, gave, her, a, little, cap, made, o...</td>\n",
+       "      <td>[once, she, give, she, a, little, cap, make, o...</td>\n",
+       "      <td>[SCONJ, PRON, VERB, PRON, DET, ADJ, NOUN, VERB...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>because it suited her so well and she wanted t...</td>\n",
+       "      <td>[because, it, suited, her, so, well, and, she,...</td>\n",
+       "      <td>[because, it, suit, she, so, well, and, she, w...</td>\n",
+       "      <td>[SCONJ, PRON, VERB, PRON, ADV, ADV, CCONJ, PRO...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>here is a piece of cake and a bottle of wine</td>\n",
+       "      <td>[here, is, a, piece, of, cake, and, a, bottle,...</td>\n",
+       "      <td>[here, be, a, piece, of, cake, and, a, bottle,...</td>\n",
+       "      <td>[ADV, AUX, DET, NOUN, ADP, NOUN, CCONJ, DET, N...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>little red cap carried water until the large l...</td>\n",
+       "      <td>[little, red, cap, carried, water, until, the,...</td>\n",
+       "      <td>[little, red, cap, carry, water, until, the, l...</td>\n",
+       "      <td>[ADJ, ADJ, NOUN, VERB, NOUN, SCONJ, DET, ADJ, ...</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>63</th>\n",
@@ -914,47 +915,141 @@
        "      <td>[the, smell, of, sausage, arose, into, the, wo...</td>\n",
        "      <td>[the, smell, of, sausage, arise, into, the, wo...</td>\n",
        "      <td>[DET, NOUN, ADP, NOUN, VERB, ADP, DET, NOUN, P...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>he sniffed and looked down stretching his neck...</td>\n",
+       "      <td>[he, sniffed, and, looked, down, stretching, h...</td>\n",
+       "      <td>[he, sniff, and, look, down, stretch, his, nec...</td>\n",
+       "      <td>[PRON, VERB, CCONJ, VERB, ADP, VERB, PRON, NOU...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>he slid off the roof fell into the trough and ...</td>\n",
+       "      <td>[he, slid, off, the, roof, fell, into, the, tr...</td>\n",
+       "      <td>[he, slide, off, the, roof, fall, into, the, t...</td>\n",
+       "      <td>[PRON, VERB, ADP, DET, NOUN, VERB, ADP, DET, N...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>and little red cap returned home happily and s...</td>\n",
+       "      <td>[and, little, red, cap, returned, home, happil...</td>\n",
+       "      <td>[and, little, red, cap, return, home, happily,...</td>\n",
+       "      <td>[CCONJ, ADJ, ADJ, NOUN, VERB, ADV, ADV, CCONJ,...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>67 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                   origin_sentences  \\\n",
-       "60                  yesterday i cooked some sausage   \n",
-       "63  the smell of sausage arose into the wolf's nose   \n",
+       "                                     origin_sentences  \\\n",
+       "0      once upon a time there was a sweet little girl   \n",
+       "1   everyone who saw her liked her but most of all...   \n",
+       "2   once she gave her a little cap made of red velvet   \n",
+       "3   because it suited her so well and she wanted t...   \n",
+       "4        here is a piece of cake and a bottle of wine   \n",
+       "..                                                ...   \n",
+       "62  little red cap carried water until the large l...   \n",
+       "63    the smell of sausage arose into the wolf's nose   \n",
+       "64  he sniffed and looked down stretching his neck...   \n",
+       "65  he slid off the roof fell into the trough and ...   \n",
+       "66  and little red cap returned home happily and s...   \n",
        "\n",
        "                                          word_tokens  \\\n",
-       "60              [yesterday, i, cooked, some, sausage]   \n",
+       "0   [once, upon, a, time, there, was, a, sweet, li...   \n",
+       "1   [everyone, who, saw, her, liked, her, but, mos...   \n",
+       "2   [once, she, gave, her, a, little, cap, made, o...   \n",
+       "3   [because, it, suited, her, so, well, and, she,...   \n",
+       "4   [here, is, a, piece, of, cake, and, a, bottle,...   \n",
+       "..                                                ...   \n",
+       "62  [little, red, cap, carried, water, until, the,...   \n",
        "63  [the, smell, of, sausage, arose, into, the, wo...   \n",
+       "64  [he, sniffed, and, looked, down, stretching, h...   \n",
+       "65  [he, slid, off, the, roof, fell, into, the, tr...   \n",
+       "66  [and, little, red, cap, returned, home, happil...   \n",
        "\n",
        "                                           word_lemma  \\\n",
-       "60                [yesterday, I, cook, some, sausage]   \n",
+       "0   [once, upon, a, time, there, be, a, sweet, lit...   \n",
+       "1   [everyone, who, see, she, like, she, but, most...   \n",
+       "2   [once, she, give, she, a, little, cap, make, o...   \n",
+       "3   [because, it, suit, she, so, well, and, she, w...   \n",
+       "4   [here, be, a, piece, of, cake, and, a, bottle,...   \n",
+       "..                                                ...   \n",
+       "62  [little, red, cap, carry, water, until, the, l...   \n",
        "63  [the, smell, of, sausage, arise, into, the, wo...   \n",
+       "64  [he, sniff, and, look, down, stretch, his, nec...   \n",
+       "65  [he, slide, off, the, roof, fall, into, the, t...   \n",
+       "66  [and, little, red, cap, return, home, happily,...   \n",
        "\n",
-       "                                             word_pos  \n",
-       "60                      [NOUN, PRON, VERB, DET, NOUN]  \n",
-       "63  [DET, NOUN, ADP, NOUN, VERB, ADP, DET, NOUN, P...  "
+       "                                             word_pos  is_article  \n",
+       "0   [ADV, SCONJ, DET, NOUN, PRON, VERB, DET, ADJ, ...        True  \n",
+       "1   [PRON, PRON, VERB, PRON, VERB, PRON, CCONJ, AD...        True  \n",
+       "2   [SCONJ, PRON, VERB, PRON, DET, ADJ, NOUN, VERB...        True  \n",
+       "3   [SCONJ, PRON, VERB, PRON, ADV, ADV, CCONJ, PRO...        True  \n",
+       "4   [ADV, AUX, DET, NOUN, ADP, NOUN, CCONJ, DET, N...        True  \n",
+       "..                                                ...         ...  \n",
+       "62  [ADJ, ADJ, NOUN, VERB, NOUN, SCONJ, DET, ADJ, ...        True  \n",
+       "63  [DET, NOUN, ADP, NOUN, VERB, ADP, DET, NOUN, P...        True  \n",
+       "64  [PRON, VERB, CCONJ, VERB, ADP, VERB, PRON, NOU...       False  \n",
+       "65  [PRON, VERB, ADP, DET, NOUN, VERB, ADP, DET, N...        True  \n",
+       "66  [CCONJ, ADJ, ADJ, NOUN, VERB, ADV, ADV, CCONJ,...       False  \n",
+       "\n",
+       "[67 rows x 5 columns]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df2 =df.loc[df.word_tokens.isin (['a', 'the', 'an']) ]\n",
-    "# df2\n",
-    "aaa=['sausage']\n",
-    "#df['mask'] = df.apply(lambda x: any([x for aaa in df.word_tokens if x in aaa], axis=1))\n",
-    "#mask = df.word_tokens.apply(lambda x: any(x in ['a', 'the', 'an'] for x in df.word_tokens))\n",
+    "# Записываем флаг на упражнения с артиклем\n",
+    "df['is_article'] = df['word_tokens'].apply(lambda x: any([i in x for i in ['the', 'a', 'an']])) \n",
+    "df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [5]])"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = pd.Series([12.539048, 5.688863, 16.247349, 9.601944, 5.551343, 5.591008, 10.093195, 11.189223, 10.067743, 1.822353])\n",
     "\n",
+    "arr = [s1.min(), s1.quantile(0.25), s1.median(), s1.quantile(0.75), s1.max()]\n",
+    "pd.Series(arr)\n",
+    "s1.describe().T\n",
     "\n",
+    "s = pd.Series(list('abdcbdhafceeabcahbcaedadaecbbbecafgh'))\n",
+    "aa = s.value_counts().sort_values(ascending=False)[0:2].index\n",
+    "s.where(s.isin(aa), 'Yet another value')\n",
     "\n",
-    "mask = df['word_tokens'].apply(lambda x: any([i in x for i in aaa]))\n",
-    "print(df['word_tokens'].apply(lambda x: any([i in x for i in aaa])))\n",
-    "df1 = df[mask]\n",
-    "df1\n",
+    "s1 = pd.Series(range(0, 10))\n",
+    "#print(pd.DataFrame(data=[[_ for _ in s1[:5]], [_ for _ in s1[5:]]])) \n",
+    "\n",
+    "s1 = pd.Series([5, 10, 2, 3, 9, 12, 1])\n",
+    "s1 = s1.to_numpy()\n",
+    "np.argwhere(s1%2==0)\n",
+    "#np.argwhere(s1)\n",
     "\n"
    ]
   },
