--- a/1.ipynb
+++ b/1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "4     []       ___  your manners and  ___  her my greetings  "
       ]
      },
-     "execution_count": 339,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "4     []       ___  your manners and  ___  her my greetings  "
       ]
      },
-     "execution_count": 342,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>once upon a time there was a sweet little girl</td>\n",
-       "      <td>[['is', 'be', 'been', 'am', 'was', 'being']]</td>\n",
+       "      <td>[['being', 'am', 'be', 'was', 'is', 'been']]</td>\n",
        "      <td>['was']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -488,7 +488,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>once she gave her a little cap made of red velvet</td>\n",
-       "      <td>[['giving', 'gives', 'gave', 'given', 'give'],...</td>\n",
+       "      <td>[['gave', 'gives', 'give', 'giving', 'given'],...</td>\n",
        "      <td>['gave', 'made']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -497,7 +497,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>take them to your grandmother</td>\n",
-       "      <td>[['taking', 'take', 'taken', 'takes', 'took']]</td>\n",
+       "      <td>[['takes', 'taken', 'take', 'taking', 'took']]</td>\n",
        "      <td>['take']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -506,7 +506,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>she is sick and weak and they will do her well</td>\n",
-       "      <td>[['did', 'does', 'doing', 'do', 'done']]</td>\n",
+       "      <td>[['do', 'doing', 'done', 'did', 'does']]</td>\n",
        "      <td>['do']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -515,7 +515,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>mind your manners and give her my greetings</td>\n",
-       "      <td>[['minding', 'minded', 'mind', 'minds'], ['giv...</td>\n",
+       "      <td>[['minding', 'minds', 'mind', 'minded'], ['gav...</td>\n",
        "      <td>['mind', 'give']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -533,7 +533,7 @@
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>carry the water that i boiled them with to the...</td>\n",
-       "      <td>[['carry', 'carries', 'carrying', 'carried'], ...</td>\n",
+       "      <td>[['carrying', 'carried', 'carry', 'carries'], ...</td>\n",
        "      <td>['carry', 'boiled']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -542,7 +542,7 @@
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>little red cap carried water until the large l...</td>\n",
-       "      <td>[['carry', 'carries', 'carrying', 'carried']]</td>\n",
+       "      <td>[['carrying', 'carried', 'carry', 'carries']]</td>\n",
        "      <td>['carried']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -551,7 +551,7 @@
        "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>the smell of sausage arose into the wolf's nose</td>\n",
-       "      <td>[['arisen', 'arises', 'arose', 'arising', 'ari...</td>\n",
+       "      <td>[['arises', 'arisen', 'arose', 'arising', 'ari...</td>\n",
        "      <td>['arose']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -560,7 +560,7 @@
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>he slid off the roof fell into the trough and ...</td>\n",
-       "      <td>[['slide', 'slid', 'slides', 'sliding'], ['fal...</td>\n",
+       "      <td>[['slides', 'slide', 'sliding', 'slid'], ['fal...</td>\n",
        "      <td>['slid', 'fell', 'drowned']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -569,7 +569,7 @@
        "    <tr>\n",
        "      <th>40</th>\n",
        "      <td>and little red cap returned home happily and s...</td>\n",
-       "      <td>[['returning', 'returned', 'returns', 'return']]</td>\n",
+       "      <td>[['returning', 'returns', 'return', 'returned']]</td>\n",
        "      <td>['returned']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -595,17 +595,17 @@
        "40  and little red cap returned home happily and s...   \n",
        "\n",
        "                                              options  \\\n",
-       "0        [['is', 'be', 'been', 'am', 'was', 'being']]   \n",
-       "1   [['giving', 'gives', 'gave', 'given', 'give'],...   \n",
-       "2      [['taking', 'take', 'taken', 'takes', 'took']]   \n",
-       "3            [['did', 'does', 'doing', 'do', 'done']]   \n",
-       "4   [['minding', 'minded', 'mind', 'minds'], ['giv...   \n",
+       "0        [['being', 'am', 'be', 'was', 'is', 'been']]   \n",
+       "1   [['gave', 'gives', 'give', 'giving', 'given'],...   \n",
+       "2      [['takes', 'taken', 'take', 'taking', 'took']]   \n",
+       "3            [['do', 'doing', 'done', 'did', 'does']]   \n",
+       "4   [['minding', 'minds', 'mind', 'minded'], ['gav...   \n",
        "..                                                ...   \n",
-       "36  [['carry', 'carries', 'carrying', 'carried'], ...   \n",
-       "37      [['carry', 'carries', 'carrying', 'carried']]   \n",
-       "38  [['arisen', 'arises', 'arose', 'arising', 'ari...   \n",
-       "39  [['slide', 'slid', 'slides', 'sliding'], ['fal...   \n",
-       "40   [['returning', 'returned', 'returns', 'return']]   \n",
+       "36  [['carrying', 'carried', 'carry', 'carries'], ...   \n",
+       "37      [['carrying', 'carried', 'carry', 'carries']]   \n",
+       "38  [['arises', 'arisen', 'arose', 'arising', 'ari...   \n",
+       "39  [['slides', 'slide', 'sliding', 'slid'], ['fal...   \n",
+       "40   [['returning', 'returns', 'return', 'returned']]   \n",
        "\n",
        "                         answer  task result  \\\n",
        "0                       ['was']  VERB     []   \n",
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>once upon a time there was a sweet little girl</td>\n",
-       "      <td>[['is', 'be', 'been', 'am', 'was', 'being']]</td>\n",
+       "      <td>[['being', 'am', 'be', 'was', 'is', 'been']]</td>\n",
        "      <td>['was']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -707,7 +707,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>once she gave her a little cap made of red velvet</td>\n",
-       "      <td>[['giving', 'gives', 'gave', 'given', 'give'],...</td>\n",
+       "      <td>[['gave', 'gives', 'give', 'giving', 'given'],...</td>\n",
        "      <td>['gave', 'made']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -716,7 +716,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>take them to your grandmother</td>\n",
-       "      <td>[['taking', 'take', 'taken', 'takes', 'took']]</td>\n",
+       "      <td>[['takes', 'taken', 'take', 'taking', 'took']]</td>\n",
        "      <td>['take']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -725,7 +725,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>she is sick and weak and they will do her well</td>\n",
-       "      <td>[['did', 'does', 'doing', 'do', 'done']]</td>\n",
+       "      <td>[['do', 'doing', 'done', 'did', 'does']]</td>\n",
        "      <td>['do']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -734,7 +734,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>mind your manners and give her my greetings</td>\n",
-       "      <td>[['minding', 'minded', 'mind', 'minds'], ['giv...</td>\n",
+       "      <td>[['minding', 'minds', 'mind', 'minded'], ['gav...</td>\n",
        "      <td>['mind', 'give']</td>\n",
        "      <td>VERB</td>\n",
        "      <td>[]</td>\n",
@@ -753,11 +753,11 @@
        "4        mind your manners and give her my greetings   \n",
        "\n",
        "                                             options            answer  task  \\\n",
-       "0       [['is', 'be', 'been', 'am', 'was', 'being']]           ['was']  VERB   \n",
-       "1  [['giving', 'gives', 'gave', 'given', 'give'],...  ['gave', 'made']  VERB   \n",
-       "2     [['taking', 'take', 'taken', 'takes', 'took']]          ['take']  VERB   \n",
-       "3           [['did', 'does', 'doing', 'do', 'done']]            ['do']  VERB   \n",
-       "4  [['minding', 'minded', 'mind', 'minds'], ['giv...  ['mind', 'give']  VERB   \n",
+       "0       [['being', 'am', 'be', 'was', 'is', 'been']]           ['was']  VERB   \n",
+       "1  [['gave', 'gives', 'give', 'giving', 'given'],...  ['gave', 'made']  VERB   \n",
+       "2     [['takes', 'taken', 'take', 'taking', 'took']]          ['take']  VERB   \n",
+       "3           [['do', 'doing', 'done', 'did', 'does']]            ['do']  VERB   \n",
+       "4  [['minding', 'minds', 'mind', 'minded'], ['gav...  ['mind', 'give']  VERB   \n",
        "\n",
        "  result                                    sentence_hidden  \n",
        "0     []   once upon a time there  ___  a sweet little girl  \n",
@@ -767,7 +767,7 @@
        "4     []       ___  your manners and  ___  her my greetings  "
       ]
      },
-     "execution_count": 345,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
        "4     []       ___  your manners and  ___  her my greetings  "
       ]
      },
-     "execution_count": 347,
+     "execution_count": 364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
        "4     []       ___  your manners and  ___  her my greetings  "
       ]
      },
-     "execution_count": 348,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,27 +1023,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
       "once upon a time there  ___  a sweet little girl\n",
-      "once upon a time there was a sweet little girl\n"
+      "once upon a time there was a sweet little girl\n",
+      "Попробуйте еще раз\n",
+      "Попробуйте еще раз\n",
+      "Попробуйте еще раз\n",
+      "Попробуйте еще раз\n",
+      "Попробуйте еще раз\n",
+      "Попробуйте еще раз\n",
+      "Попробуйте еще раз\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"str\") to list",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3s/0vl43zsj2n79hlj09xb7sby40000gn/T/ipykernel_1447/715318075.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['result'][index] =  'any'\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[349], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m option \u001b[39m=\u001b[39m row[\u001b[39m'\u001b[39m\u001b[39moptions\u001b[39m\u001b[39m'\u001b[39m][i]\n\u001b[1;32m     11\u001b[0m random\u001b[39m.\u001b[39mshuffle(option)\n\u001b[0;32m---> 12\u001b[0m option \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39;49m\u001b[39m–––\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m+\u001b[39;49m option\n\u001b[1;32m     13\u001b[0m \u001b[39m#df['result'][index] =  st.selectbox('nolabel', option, label_visibility=\"hidden\", key =str(key) )\u001b[39;00m\n\u001b[1;32m     14\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mresult\u001b[39m\u001b[39m'\u001b[39m][index] \u001b[39m=\u001b[39m  \u001b[39m'\u001b[39m\u001b[39many\u001b[39m\u001b[39m'\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"str\") to list"
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[391], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mif\u001b[39;00m df[\u001b[39m'\u001b[39m\u001b[39mresult\u001b[39m\u001b[39m'\u001b[39m][index] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m–––\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m     21\u001b[0m     \u001b[39mpass\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m \u001b[39melif\u001b[39;00m df[\u001b[39m'\u001b[39m\u001b[39mresult\u001b[39m\u001b[39m'\u001b[39m][index] \u001b[39m==\u001b[39m \u001b[39mstr\u001b[39m(row[\u001b[39m'\u001b[39;49m\u001b[39manswer\u001b[39;49m\u001b[39m'\u001b[39;49m][i]):\n\u001b[1;32m     24\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mЭто правльный ответ\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     26\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
      ]
     }
    ],
@@ -1051,7 +1068,10 @@
     "\n",
     "\n",
     "pd.set_option('display.max_rows', 20) \n",
-    "print(row['options'][0])\n",
+    "# print(row['options'].dtype())\n",
+    "# print(row['options'][0])\n",
+    "# print(len['options'])\n",
+    "# print(len(row['options']))\n",
     "for index, row in df.iterrows():\n",
     "    print(str(row['sentence_hidden']))\n",
     "    print(str(row['sentence']))\n",
@@ -1062,6 +1082,7 @@
     "        option = row['options'][i]\n",
     "        random.shuffle(option)\n",
     "        option = ['–––'] + option\n",
+    "        #option.append(['–––'])\n",
     "        #df['result'][index] =  st.selectbox('nolabel', option, label_visibility=\"hidden\", key =str(key) )\n",
     "        df['result'][index] =  'any'\n",
     "\n",
